fix: map padding on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -50,7 +50,6 @@ body {
     width: 100%;
     display: grid;
     transition: height 0.1s;
-    padding-top: 0.3rem;
 
     @include base.lg {
         padding: unset;
